# Graph-Machine-Learning

.github/workflows/: ci.yaml
Chapter03/: 04_Graph_Neural_Network.ipynb
Chapter04/: 01_Feature_based_methods.ipynb  01_Shallow_Embeddings.ipynb  02_Shallow_embeddings.ipynb  04_Graph_Neural_Networks.ipynb  pyproject.toml  requirements.txt
Chapter05/: 01_link_prediction.ipynb
Chapter06/: 01_Social_network_analysis.ipynb  02_Social_network_analysis.ipynb  pyproject.toml  requirements.txt
ChapterNN/: 01_ImageClassification_TensorFlow.ipynb  02_Autoencoders.ipynb  02_ImageClassification_Pytorch.ipynb  03_Autoencoders.ipynb  04_GraphAutoEncoder_PyGeometric.ipynb  05_GraphAutoEncoder_StellarGraph.ipynb  GAE.ipynb  GraphAutoEncoder_PyG.ipynb  GraphAutoEncoder_SG.ipynb  ImageClassification_Pytorch.ipynb  ImageClassification_TensorFlow.ipynb  pyproject.toml  requirements.txt
docker/: Dockerfile
