[tool.poetry]
name = "Graph Machine Learning - Chapter NN"
version = "1.0.0"
description = ""
authors = ["Enrico Deusebio <edeusebio85@gmail.com>"]
packages = []

[tool.setuptools]
py-modules = []

[tool.poetry.dependencies]
python = "~3.8"
ipykernel = ">=6.0.0" 
matplotlib = "==3.2.2"
tensorflow = "<2.5.0" 
torch = "^2.1.0"
torchvision = "^0.16.0"
torchmetrics="^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
